UAT fixes -- increased clickable button size on mobile sidenav; adjusted margins on nested ul ol lists

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -11,7 +11,7 @@ a {
 		&::after {
 			content: '\f08e';
 			font-family: $font-fontawesome;
-			margin-left: 0.25rem;
+			margin: 0 px2rem(4);
 		}
 	}
 }
@@ -161,6 +161,23 @@ a.btn-secondary, button.btn-secondary {
 
 		li {
 			@include p2;
+			margin: px2rem(4) 0;
+
+			&:first-child {
+				margin-top: 0;
+			}
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+
+		ul, ol {
+			margin: px2rem(4) 0;
+
+			&:first-child, &:last-child {
+				margin: px2rem(4) 0;
+			}
 		}
 	}
 
